<resources>
    <string name="app_name">Biisit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="favourites_spinner_title">Display favourites?</string>
    <string name="search_hint">Search SoundCloud</string>

    <string-array name="favourites_spinner_choices">
        <item>All My Music</item>
        <item>Only Favourites</item>
    </string-array>
    <string-array name="search_spinner_choices">
        <item>Keyword</item>
        <item>Tag</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="logged_out_user_display_name">Biisit User</string>
    <string name="my_music_title">My Music</string>
    <string name="soundcloud_title">SoundCloud</string >
    <string name="account_section_subheader">Account</string>
    <string name="sign_in_title">Sign In</string>
    <string name="my_music_emptyview_text">No Music on device!</string>
    <string name="my_music_no_fav_emptyview_text">No favourites set!\nRemember, only signed in users can set favourites.</string>
    <string name="soundcloud_emptyview_text">No results for that search!\nTry something else.</string>
    <string name="soundcloud_emptyview_text_nosearch">Try a search to see results here!</string>
    <string name="soundcloud_emptyview_text_nonet">Couldn\'t fetch search results.\nPlease check the network connection and try again.</string>
    <string name="biisit_logo_label">Biisit Logo</string>
    <string name="tap_to_play_message">Tap to Play</string>
    <string name="tap_to_pause_message">Tap to Pause</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="progress_dialog_fetching_message">Fetching...</string>
    <string name="permission_explanation_snackbar_message">Cannot read local music without permission</string>
    <string name="sign_in_snackbar_unexpected_response">Unexpected response from Sign-in</string>
    <string name="sign_in_snackbar_cancelled">Sign in was cancelled</string>
    <string name="sign_in_snackbar_network_error">Unable to sign in. Please check internet connection.</string>
    <string name="sign_in_snackbar_generic_error">Error while signing in</string>
    <!--<string-array name="sort_spinner_choice_values">-->
    <!--<item>all</item>-->
    <!--<item>only_fav</item>-->
    <!--</string-array>-->
</resources>
