<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_music"
            android:icon="@drawable/ic_music"
            android:title="@string/my_music_title"/>
        <item
            android:id="@+id/soundcloud"
            android:icon="@drawable/ic_soundcloud"
            android:title="@string/soundcloud_title"/>
    </group>

    <item android:title="@string/account_section_subheader">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/sign_in_out"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/sign_in_title"/>
            </group>
        </menu>
    </item>

</menu>
